using CollegeLMS.API.Dtos;
using CollegeLMS.API.Response;

namespace CollegeLMS.API.Interfaces;

public interface IScheduleCorrectionService
{
    Task<Result<CorrectionPreviewResponse>> PreviewAsync(Stream fileStream, CancellationToken ct);

    Task<Result<DocumentDownloadResult>> ExportManualAsync(
        ManualCorrectionExportRequest request,
        CancellationToken ct
    );

    Task<Result<CorrectionConfirmResult>> ConfirmAsync(
        CorrectionConfirmRequest request,
        string idempotencyKey,
        Guid appliedByUserId,
        CancellationToken ct
    );

    Task<Result<List<ScheduleChangeDto>>> ApplyEntriesAsync(
        List<CorrectionPreviewEntry> entries,
        Guid appliedByUserId,
        DateTime? correctionDate,
        CancellationToken ct
    );

    Task<Result<PagedResponse<ScheduleHistoryResponse>>> GetHistoryAsync(
        Guid? groupId,
        Guid? teacherId,
        int? week,
        int? page,
        int? pageSize,
        CancellationToken ct
    );
}
